plugins {
    id("java")
    id("org.jetbrains.intellij") version "1.17.4"
}

group = "com.vkr"
version = "0.0.1"

repositories {
    mavenCentral()
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

intellij {
    version.set("2024.2")
    type.set("IC")
    plugins.set(listOf("java")) // нужно для PSI Java и всего, что связано с com.intellij.modules.java
}

tasks {
    test {
        useJUnitPlatform()
    }
    patchPluginXml {
        sinceBuild.set("242")
        untilBuild.set("252.*")
    }
}
